Widens annotation span to prevent wrapping

--- a/app/assets/stylesheets/map/overlays.css.scss
+++ b/app/assets/stylesheets/map/overlays.css.scss
@@ -197,7 +197,7 @@
   position: absolute;
   top: 100px;
   left: 35px;
-  width: 950px;
+  width: 1250px;
 }
 .overlay-properties ul {
   margin: 3px 0 0 0;
